--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,13 @@
-# Compiled class file
+### Compiled class file ###
 *.class
 
-# Log file
+### Log file ###
 *.log
 
-# BlueJ files
-*.ctxt
+### virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml ###
+hs_err_pid*
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+### Package Files ###
 *.jar
 *.war
 *.nar
@@ -19,8 +16,44 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+### Gradle ###
+.gradle
+build/
+!gradle-wrapper.jar
 
-# User-defined
+### Maven ###
+target/
+!maven-wrapper.jar
+
+### BlueJ files ###
+*.ctxt
+
+### VS Code ###
+.vscode/
+
+### NetBeans ###
+nbproject/private/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+
+### User-defined ###
 dev/
+*.sublime-*
+*.onsave
