--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'java'
     id 'io.spring.dependency-management' version '1.0.7.RELEASE'
     id 'io.dcow.sublime' version '0.9.2'
+    // id 'io.franzbecker.gradle-lombok' version '2.1'
 }
 
 group = 'com.skillmasters'
@@ -27,6 +28,12 @@ dependencies {
     compile 'io.springfox:springfox-swagger-ui:2.9.2'
     compile 'org.springframework.boot:spring-boot-starter-web'
     // implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    // implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    // implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    // runtimeOnly 'org.xerial:sqlite-jdbc:3.27.2'
+    compileOnly 'org.projectlombok:lombok:1.18.6'
+    annotationProcessor 'org.projectlombok:lombok:1.18.6'
+    // runtimeOnly 'org.postgresql:postgresql'
 }
