Add JPA and JDBC

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 springfox.documentation.swagger.v2.path=/api/docs
+spring.jpa.database-platform=com.skillmasters.server.sqlite.SQLiteDialect
+spring.jpa.properties.hibernate.dialect=com.skillmasters.server.sqlite.SQLiteDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
