--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 springfox.documentation.swagger.v2.path=/api/docs
+
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.url=jdbc:sqlite:database.sqlite
+spring.datasource.username=root
+spring.datasource.password=
+
+spring.jpa.show-sql=true
 spring.jpa.database-platform=com.skillmasters.server.sqlite.SQLiteDialect
 spring.jpa.properties.hibernate.dialect=com.skillmasters.server.sqlite.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
