Add generic responses, fix typo

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.jpa.show-sql=true
 spring.jpa.database-platform=com.skillmasters.server.sqlite.SQLiteDialect
 spring.jpa.properties.hibernate.dialect=com.skillmasters.server.sqlite.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.connection.foreign_keys=true
