--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.6'
     annotationProcessor 'org.projectlombok:lombok:1.18.6'
     // runtimeOnly 'org.postgresql:postgresql'
+    compile group: 'org.springframework.security', name: 'spring-security-config', version: '5.1.1.RELEASE'
+    compile 'org.springframework.security:spring-security-web:5.1.5.RELEASE'
+    implementation 'com.auth0:auth0:1.11.0'
+    compile 'com.auth0:java-jwt:3.4.0"'
 }
