--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.url=jdbc:sqlite:database.sqlite
 spring.datasource.username=root
 spring.datasource.password=
 
+spring.jackson.property-naming-strategy=SNAKE_CASE
+spring.jackson.serialization.write_dates_as_timestamps=true
+
 spring.jpa.show-sql=true
 spring.jpa.database-platform=com.skillmasters.server.sqlite.SQLiteDialect
 spring.jpa.properties.hibernate.dialect=com.skillmasters.server.sqlite.SQLiteDialect
