--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.6'
     annotationProcessor 'org.projectlombok:lombok:1.18.6'
     // runtimeOnly 'org.postgresql:postgresql'
+    // auth
+    compile 'com.google.firebase:firebase-admin:6.8.1'
+    compile("org.springframework.boot:spring-boot-starter-security")
 }
