--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,11 @@
 plugins {
     id 'org.springframework.boot' version '2.1.3.RELEASE'
     id 'java'
+    id 'java-library'
     id 'io.spring.dependency-management' version '1.0.7.RELEASE'
     id 'io.dcow.sublime' version '0.9.2'
     id 'io.franzbecker.gradle-lombok' version '2.1'
+    id 'net.ltgt.apt' version '0.18'
 }
 
 group = 'com.skillmasters'
@@ -23,18 +25,31 @@ repositories {
 }
 
 dependencies {
+    compile 'com.querydsl:querydsl-core:4.2.1'
+    compile 'com.querydsl:querydsl-jpa:4.2.1'
+}
+
+dependencies {
+    compileOnly 'org.projectlombok:lombok:1.18.6'
+    annotationProcessor(
+        'com.querydsl:querydsl-apt:4.2.1:jpa',
+        'org.springframework.boot:spring-boot-starter-data-jpa',
+        'org.springframework.boot:spring-boot-starter-jdbc',
+        'org.projectlombok:lombok:1.18.6'
+    )
+
     // compile 'javax.persistence:persistence-api:1.0'
+    compile 'com.querydsl:querydsl-jpa:4.2.1'
+    compile 'com.google.guava:guava:27.1-jre'
     compile 'io.springfox:springfox-swagger2:2.9.2'
     compile 'io.springfox:springfox-swagger-ui:2.9.2'
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'javax.xml.bind:jaxb-api:2.3.0'
-    // implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation 'net.sf.biweekly:biweekly:0.6.3'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     runtimeOnly 'org.xerial:sqlite-jdbc:3.27.2'
-    compileOnly 'org.projectlombok:lombok:1.18.6'
-    annotationProcessor 'org.projectlombok:lombok:1.18.6'
     // runtimeOnly 'org.postgresql:postgresql'
 }
