--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -11,5 +11,8 @@ spring.jackson.serialization.write_dates_as_timestamps=true
 spring.jpa.show-sql=true
 spring.jpa.database-platform=com.skillmasters.server.sqlite.SQLiteDialect
 spring.jpa.properties.hibernate.dialect=com.skillmasters.server.sqlite.SQLiteDialect
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.connection.foreign_keys=true
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=validate
