--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,16 +43,15 @@ dependencies {
     compile 'com.google.guava:guava:27.1-jre'
     compile 'io.springfox:springfox-swagger2:2.9.2'
     compile 'io.springfox:springfox-swagger-ui:2.9.2'
-    compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'javax.xml.bind:jaxb-api:2.3.0'
     implementation 'net.sf.biweekly:biweekly:0.6.3'
+    implementation 'com.google.firebase:firebase-admin:6.8.1'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     runtimeOnly 'org.xerial:sqlite-jdbc:3.27.2'
     // runtimeOnly 'org.postgresql:postgresql'
-    // auth
-    compile 'com.google.firebase:firebase-admin:6.8.1'
-    compile("org.springframework.boot:spring-boot-starter-security")
 }
