Try to fix strange spring-securiy bug after live reloading

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.url=jdbc:sqlite:database.sqlite
 spring.datasource.username=root
 spring.datasource.password=
 
+spring.devtools.restart.log-condition-evaluation-delta=false
+
 spring.jackson.property-naming-strategy=SNAKE_CASE
 spring.jackson.serialization.write_dates_as_timestamps=true
 
