Try to fix hot reload from devtools

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+# server.port=8080
+# management.server.port=8090
+# management.endpoints.web.exposure.include=*
+# management.endpoint.shutdown.enabled=true
+
 springfox.documentation.swagger.v2.path=/api/docs
 
 spring.datasource.driver-class-name=org.sqlite.JDBC
