--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ plugins {
 
 group = 'com.skillmasters'
 version = '0.0.1'
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
 
 configurations {
     developmentOnly
@@ -27,9 +27,6 @@ repositories {
 dependencies {
     compile 'com.querydsl:querydsl-core:4.2.1'
     compile 'com.querydsl:querydsl-jpa:4.2.1'
-}
-
-dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.6'
     annotationProcessor(
         'com.querydsl:querydsl-apt:4.2.1:jpa',
@@ -44,9 +41,11 @@ dependencies {
     compile 'io.springfox:springfox-swagger2:2.9.2'
     compile 'io.springfox:springfox-swagger-ui:2.9.2'
     compile 'javax.xml.bind:jaxb-api:2.3.0'
+    implementation 'org.javassist:javassist'
     implementation 'net.sf.biweekly:biweekly:0.6.3'
     implementation 'com.google.firebase:firebase-admin:6.8.1'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    // implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
