--- a/app/src/test/resources/application.properties
+++ b/app/src/test/resources/application.properties
@@ -3,8 +3,10 @@
 # management.endpoints.web.exposure.include=*
 # management.endpoint.shutdown.enabled=true
 
-spring.datasource.driver-class-name=org.sqlite.JDBC
-spring.datasource.url=jdbc:sqlite:database.sqlite
+#spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:sqlite:test_database.sqlite
+spring.datasource.url=jdbc:h2:./testdb.h2
 spring.datasource.username=root
 spring.datasource.password=
 
@@ -15,7 +17,7 @@ spring.jackson.serialization.write_dates_as_timestamps=true
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.connection.foreign_keys=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=com.skillmasters.server.sqlite.SQLiteDialect
 spring.jpa.properties.hibernate.dialect=com.skillmasters.server.sqlite.SQLiteDialect
 # spring.jpa.hibernate.ddl-auto=create
