--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,11 @@ repositories {
     jcenter()
 }
 
+// compileJava {
+//     options.encoding = 'UTF-8'
+//     options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+// }
+
 dependencies {
     compile 'com.querydsl:querydsl-core:4.2.1'
     compile 'com.querydsl:querydsl-jpa:4.2.1'
