--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     compile 'com.google.guava:guava:27.1-jre'
     compile 'io.springfox:springfox-swagger2:2.9.2'
     compile 'io.springfox:springfox-swagger-ui:2.9.2'
+    compile 'io.swagger:swagger-annotations:1.5.21'
+    compile 'io.swagger:swagger-models:1.5.21'
     compile 'javax.xml.bind:jaxb-api:2.3.0'
     implementation 'org.javassist:javassist'
     implementation 'net.sf.biweekly:biweekly:0.6.3'
