Disable sql logs

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.devtools.restart.log-condition-evaluation-delta=false
 spring.jackson.property-naming-strategy=SNAKE_CASE
 spring.jackson.serialization.write_dates_as_timestamps=true
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.database-platform=com.skillmasters.server.sqlite.SQLiteDialect
 spring.jpa.properties.hibernate.dialect=com.skillmasters.server.sqlite.SQLiteDialect
 spring.jpa.hibernate.connection.foreign_keys=true
