Add logging to file

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -15,6 +15,9 @@ spring.devtools.restart.log-condition-evaluation-delta=false
 spring.jackson.property-naming-strategy=SNAKE_CASE
 spring.jackson.serialization.write_dates_as_timestamps=true
 
+logging.level.org.hibernate.SQL=DEBUG
+logging.file=${java.io.tmpdir}/server.log
+
 spring.jpa.show-sql=false
 spring.jpa.database-platform=com.skillmasters.server.sqlite.SQLiteDialect
 spring.jpa.properties.hibernate.dialect=com.skillmasters.server.sqlite.SQLiteDialect
