--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -9,13 +9,17 @@ spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.datasource.url=jdbc:sqlite:database.sqlite
 spring.datasource.username=root
 spring.datasource.password=
+spring.datasource.initialSize=1
+spring.datasource.maxActive=1
+spring.datasource.maxIdle=1
+spring.datasource.poolPreparedStatements=true
 
 spring.devtools.restart.log-condition-evaluation-delta=false
 
 spring.jackson.property-naming-strategy=SNAKE_CASE
 spring.jackson.serialization.write_dates_as_timestamps=true
 
-logging.level.org.hibernate.SQL=DEBUG
+# logging.level.org.hibernate.SQL=DEBUG
 logging.file=${java.io.tmpdir}/server.log
 
 spring.jpa.show-sql=false
@@ -23,6 +27,8 @@ spring.jpa.database-platform=com.skillmasters.server.sqlite.SQLiteDialect
 spring.jpa.properties.hibernate.dialect=com.skillmasters.server.sqlite.SQLiteDialect
 spring.jpa.hibernate.connection.foreign_keys=true
 spring.jpa.hibernate.ddl-auto=update
+javax.persistence.query.timeout=20000
+# spring.jpa.hibernate.timeout=20
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto=validate
