--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -25,6 +25,7 @@ logging.file=${java.io.tmpdir}/server.log
 spring.jpa.show-sql=false
 spring.jpa.database-platform=com.skillmasters.server.sqlite.SQLiteDialect
 spring.jpa.properties.hibernate.dialect=com.skillmasters.server.sqlite.SQLiteDialect
+spring.jpa.properties.hibernate.connection.pool_size=1
 spring.jpa.hibernate.connection.foreign_keys=true
 spring.jpa.hibernate.ddl-auto=update
 javax.persistence.query.timeout=20000
