add comments for future fix sqlite_busy in tests

--- a/app/src/test/resources/application.properties
+++ b/app/src/test/resources/application.properties
@@ -10,6 +10,11 @@ spring.datasource.url=jdbc:h2:./testdb.h2
 spring.datasource.username=root
 spring.datasource.password=
 
+#spring.datasource.initialSize=1
+#spring.datasource.maxActive=1
+#spring.datasource.maxIdle=1
+#spring.datasource.poolPreparedStatements=true
+
 spring.devtools.restart.log-condition-evaluation-delta=false
 
 spring.jackson.property-naming-strategy=SNAKE_CASE
