--- a/nginx/nginx.default.conf
+++ b/nginx/nginx.default.conf
@@ -1,15 +1,25 @@
+# Java Application
+upstream backend {
+    ip_hash;
+    server app:8080;
+}
+
 # HTTP server
 server {
-    listen 80;
+    listen 80 default_server;
     charset utf-8;
     access_log off;
 
     location / {
-        proxy_pass http://app:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host:$server_port;
         proxy_set_header X-Forwarded-Host $server_name;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_cache_bypass $http_upgrade;
+        proxy_pass http://backend;
     }
 
     location /static {
