Add EventPattern remove tests

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,7 @@ dependencies {
 
 test {
     include "com/skillmasters/server/suites/TestServiceSuite.class"
+//    failFast = true
 }
 
 //fancy test output
