--- a/app/src/test/resources/application.properties
+++ b/app/src/test/resources/application.properties
@@ -23,8 +23,10 @@ spring.jackson.serialization.write_dates_as_timestamps=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.connection.foreign_keys=true
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database-platform=com.skillmasters.server.sqlite.SQLiteDialect
-spring.jpa.properties.hibernate.dialect=com.skillmasters.server.sqlite.SQLiteDialect
+#spring.jpa.database-platform=com.skillmasters.server.sqlite.SQLiteDialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.properties.hibernate.dialect=com.skillmasters.server.sqlite.SQLiteDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 # spring.jpa.hibernate.ddl-auto=create
 # spring.jpa.hibernate.ddl-auto=create-drop
 # spring.jpa.hibernate.ddl-auto=validate
