--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ plugins {
     id 'io.dcow.sublime' version '0.9.2'
     id 'io.franzbecker.gradle-lombok' version '2.1'
     id 'net.ltgt.apt' version '0.18'
+    id 'jacoco'
 }
 
 group = 'com.skillmasters'
@@ -81,6 +82,13 @@ dependencies {
 test {
     include "com/skillmasters/server/suites/TestServiceSuite.class"
 //    failFast = true
+}
+
+jacocoTestReport {
+    reports {
+        html.enabled true
+        html.destination file("${buildDir}/jacocoHtml")
+    }
 }
 
 //fancy test output
