Disable Data REST, enable Actuator

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -21,6 +21,8 @@ spring.jackson.serialization.write_dates_as_timestamps=true
 
 # logging.level.org.hibernate.SQL=DEBUG
 logging.file=${java.io.tmpdir}/server.log
+management.endpoints.web.exposure.include=* 
+management.trace.http.enabled=true
 
 spring.jpa.show-sql=false
 spring.jpa.database-platform=com.skillmasters.server.sqlite.SQLiteDialect
