--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 # server.port=8080
 # management.server.port=8090
-# management.endpoints.web.exposure.include=*
 # management.endpoint.shutdown.enabled=true
+# management.endpoints.web.exposure.include=* 
+# management.trace.http.enabled=true
 
 springfox.documentation.swagger.v2.path=/api/docs
 
@@ -10,9 +11,11 @@ spring.datasource.url=jdbc:sqlite:database.sqlite
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.initialSize=1
-spring.datasource.maxActive=1
-spring.datasource.maxIdle=1
-spring.datasource.poolPreparedStatements=true
+spring.datasource.max-active=1
+spring.datasource.max-idle=1
+spring.datasource.max-wait=20000
+spring.datasource.pool-prepared-statements=true
+javax.persistence.query.timeout=20000
 
 spring.devtools.restart.log-condition-evaluation-delta=false
 
@@ -21,8 +24,6 @@ spring.jackson.serialization.write_dates_as_timestamps=true
 
 # logging.level.org.hibernate.SQL=DEBUG
 logging.file=${java.io.tmpdir}/server.log
-management.endpoints.web.exposure.include=* 
-management.trace.http.enabled=true
 
 spring.jpa.show-sql=false
 spring.jpa.database-platform=com.skillmasters.server.sqlite.SQLiteDialect
@@ -30,7 +31,6 @@ spring.jpa.properties.hibernate.dialect=com.skillmasters.server.sqlite.SQLiteDia
 spring.jpa.properties.hibernate.connection.pool_size=1
 spring.jpa.hibernate.connection.foreign_keys=true
 spring.jpa.hibernate.ddl-auto=update
-javax.persistence.query.timeout=20000
 # spring.jpa.hibernate.timeout=20
 #spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.ddl-auto=create-drop
