--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,15 @@ jacocoTestReport {
         html.enabled true
         html.destination file("${buildDir}/jacocoHtml")
     }
+
+
+    afterEvaluate {
+        classDirectories.from = files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: [
+                    'springfox/documentation/service/**',
+            ])
+        })
+    }
 }
 
 //fancy test output
