Controllers tests WIP

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,7 @@ dependencies {
 test {
     include "com/skillmasters/server/suites/TestServiceSuite.class"
     include "com/skillmasters/server/suites/TestGettersSettersSuite.class"
+    include "com/skillmasters/server/suites/TestControllersSuite.class"
 //    failFast = true
 }
 
