--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,6 +1,18 @@
 version: '3.4'
 
 services:
+  db:
+    restart: always
+    image: postgres:11.4-alpine
+    ports:
+      - "5432:5432"
+    environment:
+      POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 1111
+    # command: postgres -c shared_buffers=512MB -c effective_cache_size=1536MB -c work_mem=2621kB -c maintenance_work_mem=128MB
+    # shm_size: '1gb'
+
   nginx:
     restart: always
     image: nginx:alpine
@@ -10,6 +22,7 @@ services:
       - ./nginx/nginx.default.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - app
+
   app:
     restart: always
     image: gradle:5.2.1-jdk8-alpine
@@ -18,4 +31,6 @@ services:
       - "8080"
     volumes:
       - ./app:/srv:rw
-    command: sh -c "gradle clean bootJar ; java -jar /srv/build/libs/server-0.0.1.jar"
+    command: sh -c "gradle clean bootJar ; java -jar /srv/build/libs/server-0.0.1.jar -Dspring.profiles.active=prod"
+    depends_on:
+      - db
