Fix profile settings in docker

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -31,6 +31,6 @@ services:
       - "8080"
     volumes:
       - ./app:/srv:rw
-    command: sh -c "gradle clean bootJar ; java -jar /srv/build/libs/server-0.0.1.jar -Dspring.profiles.active=prod"
+    command: sh -c "gradle clean bootJar ; java -jar -Dspring.profiles.active=prod /srv/build/libs/server-0.0.1.jar"
     depends_on:
       - db
