--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -6,7 +6,7 @@ services:
     image: postgres:11.4-alpine
     container_name: planner-db
     ports:
-      - "5432:5432"
+      - "9050:5432"
     volumes:
       - ./postgres/pgdata:/var/lib/postgresql/data
       # - reserved for config
@@ -21,7 +21,7 @@ services:
     restart: always
     image: nginx:alpine
     ports:
-      - "80:80"
+      - "9040:80"
     volumes:
       - ./nginx/nginx.default.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
@@ -33,9 +33,9 @@ services:
     container_name: planner-app
     working_dir: /srv
     expose:
-      - "8080"
+      - "9041"
     volumes:
       - ./app:/srv:rw
-    command: sh -c "gradle clean bootJar ; java -jar -Dspring.profiles.active=prod /srv/build/libs/server-1.0.0.jar"
+    command: sh -c "gradle clean bootJar ; java -Dserver.port=9041 -jar -Dspring.profiles.active=prod /srv/build/libs/server-1.0.0.jar"
     depends_on:
       - db
