--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -23,11 +23,12 @@ services:
     ports:
       - "9040:80"
     volumes:
-      - ./nginx/nginx.default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/nginx.prod.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - app
 
   app:
+    user: root
     restart: always
     image: gradle:5.2.1-jdk8-alpine
     container_name: planner-app
@@ -35,7 +36,12 @@ services:
     expose:
       - "9041"
     volumes:
+      - gradle-cache:/home/gradle/.gradle
       - ./app:/srv:rw
-    command: sh -c "gradle clean bootJar ; java -Dserver.port=9041 -jar -Dspring.profiles.active=prod /srv/build/libs/server-1.0.0.jar"
+    command: sh -c "chmod -R 777 /srv ; gradle clean bootJar ; java -Dserver.port=9041 -jar -Dspring.profiles.active=prod /srv/build/libs/server-1.0.0.jar"
     depends_on:
       - db
+
+volumes:
+  gradle-cache:
+    external: false
