--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,19 @@ services:
       - ./nginx/nginx.default.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - app
+
   app:
+    user: root
     restart: always
     image: gradle:5.2.1-jdk8-alpine
     working_dir: /srv
     expose:
       - "8080"
     volumes:
+      - gradle-cache:/home/gradle/.gradle
       - ./app:/srv:rw
-    command: gradle clean bootRun
+    command: sh -c "chmod -R 777 /srv ; gradle clean bootRun"
+
+volumes:
+  gradle-cache:
+    external: false
